@@ -14,6 +14,7 @@ Metadata
 Other
 -----
 
+* Access to signed images (instances/.../image-int16)
 * Statistics about patients, studies, series and instances
 * Link from anonymized to original resource in Orthanc Explorer
 * Fixes for Red Hat and Debian packaging
